fixed z-index in section Titles

--- a/components/AboutMe/Roadmap/Roadmap.module.css
+++ b/components/AboutMe/Roadmap/Roadmap.module.css
@@ -13,6 +13,7 @@
 	height: 100px;
 	z-index: 0;
 	color: var(--main-color-darker);
+	z-index: 0;
 }
 
 .iconFirst {
